--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,18 @@ language: python
 python:
   - "2.7"
   - "3.4"
-# command to install dependencies
 services: mongodb
-install:
+install: # command to install dependencies
   - "pip install -r requirements.txt"
 # command to run tests
 script: python script.py
+
+notifications:
+  email:
+    - davidawad64@gmail.com
+matrix:
+  allow_failures: true
+
+
+
+sudo: false
