--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: python
 python:
   - "2.7"
   - "3.4"
-services: mongodb
+services: 
+  -mongodb
 install: # command to install dependencies
   - "pip install -r requirements.txt"
 # command to run tests
