--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 install: # command to install dependencies
   - "pip install -r requirements.txt"
 # command to run tests
-script: python script.py
+script: python test.py
 
 notifications:
   email:
