--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+alembic==0.7.4
+dataset==0.5.5
 Flask==0.10.1
+gunicorn==19.1.1
 itsdangerous==0.24
 Jinja2==2.7.3
+Mako==1.0.0
 MarkupSafe==0.23
 pymongo==2.7.2
+python-slugify==0.1.0
+PyYAML==3.11
+SQLAlchemy==0.9.8
+Unidecode==0.4.17
 Werkzeug==0.9.6
