--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,42 @@
-alembic==0.7.4
-dataset==0.5.5
-Flask==0.10.1
-gunicorn==19.1.1
-itsdangerous==0.24
-Jinja2==2.7.3
-Mako==1.0.0
-MarkupSafe==0.23
-pymongo==2.7.2
-python-slugify==0.1.0
-PyYAML==3.11
-SQLAlchemy==0.9.8
-Unidecode==0.4.17
-Werkzeug==0.9.6
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.46
+characteristic==0.1.0
+chardet==2.2.1
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+duplicity==0.6.23
+httplib2==0.9
+idna==0.9
+lockfile==0.8
+lxml==3.3.6
+oauthlib==0.6.1
+oneconf==0.3.7
+PAM==0.4.2
+pexpect==3.2
+Pillow==2.6.1
+piston-mini-client==0.7.5
+pyasn1==0.1.7
+pyasn1-modules==0.0.5
+pycrypto==2.6.1
+pycups==1.9.67
+pygobject==3.14.0
+pyOpenSSL==0.13.1
+pyserial==2.6
+python-apt===0.9.3.10ubuntu1
+python-debian==0.1.22
+python-simple-hipchat==0.3.3
+pyxdg==0.25
+reportlab==3.1.8
+service-identity==1.0.0
+sessioninstaller==0.0.0
+six==1.7.3
+software-center-aptd-plugins==0.0.0
+system-service==0.1.6
+Twisted-Core==14.0.2
+Twisted-Web==14.0.2
+unity-lens-photos==1.0
+virtualenv==12.0.5
+xdiagnose==3.6.6
+zope.interface==4.1.1
