--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ MarkupSafe==0.23
 pymongo==2.7.2
 python-slugify==0.1.0
 PyYAML==3.11
+sendgrid==1.2.3
+six==1.9.0
+smtpapi==0.1.3
 SQLAlchemy==0.9.8
 Unidecode==0.4.17
+unittest2==0.8.0
 Werkzeug==0.9.6
