--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,70 @@
 alembic==0.7.4
-dataset==0.5.5
+altgraph==0.10.2
+aniso8601==0.92
+bdist-mpkg==0.5.0
+bonjour-py==0.3
+dataset==0.5.6
 Flask==0.10.1
-gunicorn==19.1.1
+Flask-RESTful==0.3.1
 itsdangerous==0.24
 Jinja2==2.7.3
-Mako==1.0.0
+macholib==1.5.1
+Mako==1.0.1
 MarkupSafe==0.23
-pymongo==2.7.2
+matplotlib==1.3.1
+modulegraph==0.10.4
+numpy==1.8.0rc1
+py2app==0.7.3
+pymongo==2.8
+pyobjc-core==2.5.1
+pyobjc-framework-Accounts==2.5.1
+pyobjc-framework-AddressBook==2.5.1
+pyobjc-framework-AppleScriptKit==2.5.1
+pyobjc-framework-AppleScriptObjC==2.5.1
+pyobjc-framework-Automator==2.5.1
+pyobjc-framework-CFNetwork==2.5.1
+pyobjc-framework-Cocoa==2.5.1
+pyobjc-framework-Collaboration==2.5.1
+pyobjc-framework-CoreData==2.5.1
+pyobjc-framework-CoreLocation==2.5.1
+pyobjc-framework-CoreText==2.5.1
+pyobjc-framework-DictionaryServices==2.5.1
+pyobjc-framework-EventKit==2.5.1
+pyobjc-framework-ExceptionHandling==2.5.1
+pyobjc-framework-FSEvents==2.5.1
+pyobjc-framework-InputMethodKit==2.5.1
+pyobjc-framework-InstallerPlugins==2.5.1
+pyobjc-framework-InstantMessage==2.5.1
+pyobjc-framework-LatentSemanticMapping==2.5.1
+pyobjc-framework-LaunchServices==2.5.1
+pyobjc-framework-Message==2.5.1
+pyobjc-framework-OpenDirectory==2.5.1
+pyobjc-framework-PreferencePanes==2.5.1
+pyobjc-framework-PubSub==2.5.1
+pyobjc-framework-QTKit==2.5.1
+pyobjc-framework-Quartz==2.5.1
+pyobjc-framework-ScreenSaver==2.5.1
+pyobjc-framework-ScriptingBridge==2.5.1
+pyobjc-framework-SearchKit==2.5.1
+pyobjc-framework-ServiceManagement==2.5.1
+pyobjc-framework-Social==2.5.1
+pyobjc-framework-SyncServices==2.5.1
+pyobjc-framework-SystemConfiguration==2.5.1
+pyobjc-framework-WebKit==2.5.1
+pyOpenSSL==0.13.1
+pyparsing==2.0.1
+python-dateutil==1.5
 python-slugify==0.1.0
+pytz==2013.7
 PyYAML==3.11
-sendgrid==1.2.3
-six==1.9.0
-smtpapi==0.1.3
+scipy==0.13.0b1
+sendgrid==1.3.0
+six==1.4.1
+smtpapi==0.2.0
 SQLAlchemy==0.9.8
+Twisted==13.2.0
 Unidecode==0.4.17
-unittest2==0.8.0
-Werkzeug==0.9.6
+virtualenv==12.0.6
+Werkzeug==0.10
+xattr==0.6.4
+zope.interface==4.1.1
