--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Mako==1.0.1
 MarkupSafe==0.23
 matplotlib==1.3.1
 modulegraph==0.10.4
-numpy==1.8.0rc1
+numpy==1.9.1
 py2app==0.7.3
 pymongo==2.8
 pyobjc-core==2.5.1
