--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ python-dateutil==1.5
 python-slugify==0.1.0
 pytz==2013.7
 PyYAML==3.11
-scipy==0.13.0b1
+scipy==0.15.0
 sendgrid==1.3.0
 six==1.4.1
 smtpapi==0.2.0
