--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,10 @@ services:
   - mongodb
 # command to install dependencies
 install: 
-  - "pip install -r requirements.txt"
+  - pip install -r requirements.txt
+  - pip install python-coveralls
+  - pip install coverage
+  - pip install nose
 # command to run tests
 script: python unittest.py
 
