--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "2.7"
+  - 2.7
 services:
   - mongodb
 # command to install dependencies
@@ -14,10 +14,11 @@ install:
 # command to run tests
 script:   
   - python unittest.py
-  - coverage run unittest.py
+  - coverage run --source=coveralls unittest.py
+  - coverage report -m
 
 notifications:
   email:
     - davidawad64@gmail.com
 
-after_success: coveralls
+after_success: coveralls --verbose
