--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,9 @@
-alembic==0.7.4
-altgraph==0.10.2
-aniso8601==0.92
-bdist-mpkg==0.5.0
-dataset==0.5.6
 Flask==0.10.1
-Flask-RESTful==0.3.1
+gunicorn==19.2.1
 itsdangerous==0.24
 Jinja2==2.7.3
-macholib==1.5.1
-Mako==1.0.1
 MarkupSafe==0.23
-py2app==0.7.3
 pymongo==2.8
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-python-slugify==0.1.0
-pytz==2013.7
-PyYAML==3.11
 sendgrid==1.3.0
-six==1.4.1
 smtpapi==0.2.0
-SQLAlchemy==0.9.8
-Twisted==13.2.0
-Unidecode==0.4.17
-virtualenv==12.0.6
-Werkzeug==0.10
-xattr==0.6.4
-zope.interface==4.1.1
+Werkzeug==0.10.1
