--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 # command to run tests
 script:   
   - python unittest.py
-  - coverage run --source=coveralls unittest.py
+  - coverage run --source=app unittest.py
   - coverage report -m
 
 notifications:
