--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ python:
 services:
   - mongodb
 # command to install dependencies
-install: 
+install:
   - pip install -r requirements.txt
-  
+
 # command to run tests
-script:   
-  - python unittest.py
+script:
+  - python tests/unittest.py
 
 notifications:
   email:
