--- a/settings.yaml
+++ b/settings.yaml
@@ -1,10 +1,16 @@
 
 
+NAME: SpaceShare
+
 DEBUG: True
 
-SENDGRID_USERNAME: 'SENDY'
+MANDRILL_USERNAME:
 
-SENDGRID_PASSWORD: 'STRAIGHT OUTTA COMPTON'
+MANDRILL_KEY:
 
 
 UPLOAD_FOLDER : 'uploads/'
+
+# Celery configuration
+CELERY_BROKER_URL : 'redis://localhost:6379/0'
+CELERY_RESULT_BACKEND: 'redis://localhost:6379/0'
