--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "David Awad",
+  "repository": {
+     "type":"git",
+     "url" : "https://github.com/davidawad/spaceshare"
+    },
+  "bugs": {
+      "url": "https://github.com/davidawad/spaceshare/issues/"
+  },
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
