--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
+amqp==1.4.7
+anyjson==0.3.3
+billiard==3.3.0.20
+celery==3.1.18
+coverage==4.0
+coveralls==1.0
+docopt==0.4.0
 Flask==0.10.1
 gunicorn==19.2.1
 itsdangerous==0.24
 Jinja2==2.7.3
+kombu==3.0.28
+mandrill==1.0.57
 MarkupSafe==0.23
+nose==1.3.7
 pymongo==2.8
+python-coveralls==2.5.0
+pytz==2015.6
+PyYAML==3.11
+requests==2.8.0
 sendgrid==1.3.0
+sh==1.11
+six==1.10.0
 smtpapi==0.2.0
 Werkzeug==0.10.1
-python-coveralls
-coverage
-nose
-coveralls
+wheel==0.24.0
