frontend resource fixes

--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,25 @@
     "node_modules",
     "spaceshare/static/bower_components",
     "test",
-    "tests"
+    "tests",
+    "bower_components"
   ],
   "dependencies": {
     "bootstrap": "~3.3.2",
-    "jquery": "~2.1.3",
-    "react": "~0.12.2"
+    "jquery": "~2.1.4",
+    "react": "~0.14.0",
+    "foundation": "~5.5.3"
+  },
+  "homepage": "https://github.com/DavidAwad/SpaceShare",
+  "description": "move your thing like it ain't no thang",
+  "main": "spaceshare.py",
+  "moduleType": [],
+  "keywords": [
+    "space",
+    "share"
+  ],
+  "private": true,
+  "resolutions": {
+    "react": "~0.14.0"
   }
 }
