--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,36 @@
 amqp==1.4.7
 anyjson==0.3.3
+appnope==0.1.0
 billiard==3.3.0.20
+blessings==1.6
+bpython==0.14.2
 celery==3.1.18
-coverage==4.0
-coveralls==1.0
-docopt==0.4.0
+curtsies==0.1.19
+decorator==4.0.4
 Flask==0.10.1
-gunicorn==19.2.1
+gnureadline==6.3.3
+greenlet==0.4.9
+ipython==4.0.0
+ipython-genutils==0.1.0
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2==2.8
 kombu==3.0.28
-mandrill==1.0.57
 MarkupSafe==0.23
-nose==1.3.7
-pymongo==2.8
-python-coveralls==2.5.0
+numpy==1.10.1
+path.py==8.1.2
+pexpect==4.0.1
+pickleshare==0.5
+ptyprocess==0.5
+Pygments==2.0.2
+pymongo==3.0.3
 pytz==2015.6
 PyYAML==3.11
 requests==2.8.0
-sendgrid==1.3.0
-sh==1.11
+scikit-learn==0.16.1
+scipy==0.16.0
+simplegeneric==0.8.1
 six==1.10.0
-smtpapi==0.2.0
-Werkzeug==0.10.1
-wheel==0.24.0
+sklearn==0.0
+traitlets==4.0.0
+Werkzeug==0.10.4
+wheel==0.26.0
