fixing settings for celery to find linked redis container

--- a/app/settings.yaml
+++ b/app/settings.yaml
@@ -10,6 +10,6 @@ MANDRILL_KEY:
 
 UPLOAD_FOLDER : 'uploads/'
 
-# Celery configuration
-CELERY_BROKER_URL : 'redis://localhost:6379/0'
-CELERY_RESULT_BACKEND: 'redis://localhost:6379/0'
+# Celery configuration, redis is propagated in the celery container
+CELERY_BROKER_URL :    redis://redis
+CELERY_RESULT_BACKEND: redis://redis
