--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: python
+
+env:
+  DEBUG: True
+
+before_install:
+  - docker-compose up --build
+
+  # You will want this for logging. If one of your containers does not build for
+  # whatever reason it's best to report that now before your tests start
+  # otherwise it can be really tricky to debug why tests are failing sometimes.
+  - docker ps
+
 python:
-  - 2.7
+  - 3.5
 services:
-  - mongodb
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
+  - docker
 
 # command to run tests
 script:
