--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
+    "jquery": "^3.1.1",
     "node-sass": "^3.10.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
